Fix java options. (https://github.com/magefree/mage/issues/5645)